--- a/archives/toutiao-search/2024-02-13.md
+++ b/archives/toutiao-search/2024-02-13.md
@@ -1,59 +1,76 @@
 # 2024-02-13
 
-共 193 条
+共 209 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 13 2024 14:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 13 2024 15:00:38 GMT+0800 (China Standard Time) -->
 1. [福茂集团董事长赵安吉因车祸去世](https://so.toutiao.com/search?keyword=福茂集团董事长赵安吉因车祸去世)
 1. [贾玲瘦身后第一次见观众泪流满面](https://so.toutiao.com/search?keyword=贾玲瘦身后第一次见观众泪流满面)
 1. [舞龙舞狮打铁花 春节哪里最热闹](https://so.toutiao.com/search?keyword=舞龙舞狮打铁花+春节哪里最热闹)
 1. [哈尔滨松花江冰雪嘉年华停止开放](https://so.toutiao.com/search?keyword=哈尔滨松花江冰雪嘉年华停止开放)
+1. [浙江一县城红包装欧元](https://so.toutiao.com/search?keyword=浙江一县城红包装欧元)
 1. [几人给舅舅拜年扑空将礼物扔进院里](https://so.toutiao.com/search?keyword=几人给舅舅拜年扑空将礼物扔进院里)
-1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
 1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
-1. [男子总结今年春节三大反常现象](https://so.toutiao.com/search?keyword=男子总结今年春节三大反常现象)
+1. [75国向西方发起全球性索赔](https://so.toutiao.com/search?keyword=75国向西方发起全球性索赔)
 1. [中国首富手握两大“印钞机”](https://so.toutiao.com/search?keyword=中国首富手握两大“印钞机”)
-1. [库里职业生涯助攻数达到5974个](https://so.toutiao.com/search?keyword=库里职业生涯助攻数达到5974个)
-1. [撒贝宁李白带龙凤胎回武汉过年](https://so.toutiao.com/search?keyword=撒贝宁李白带龙凤胎回武汉过年)
+1. [男子总结今年春节三大反常现象](https://so.toutiao.com/search?keyword=男子总结今年春节三大反常现象)
+1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
 1. [喝酒不能助眠御寒](https://so.toutiao.com/search?keyword=喝酒不能助眠御寒)
-1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
-1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [撒贝宁李白带龙凤胎回武汉过年](https://so.toutiao.com/search?keyword=撒贝宁李白带龙凤胎回武汉过年)
 1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
+1. [李雪琴谈和乔杉拍情感戏的感受](https://so.toutiao.com/search?keyword=李雪琴谈和乔杉拍情感戏的感受)
+1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
+1. [联合国警告：全面攻打拉法前景可怕](https://so.toutiao.com/search?keyword=联合国警告：全面攻打拉法前景可怕)
+1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
+1. [00后整顿过年红包](https://so.toutiao.com/search?keyword=00后整顿过年红包)
+1. [演员王东承认家暴](https://so.toutiao.com/search?keyword=演员王东承认家暴)
+1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
+1. [过年走亲戚尴尬瞬间](https://so.toutiao.com/search?keyword=过年走亲戚尴尬瞬间)
+1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
+1. [女子买一箱坏果 老板称切开了不退](https://so.toutiao.com/search?keyword=女子买一箱坏果+老板称切开了不退)
+1. [小杨哥掉水里 大杨哥被鞭炮炸伤](https://so.toutiao.com/search?keyword=小杨哥掉水里+大杨哥被鞭炮炸伤)
+1. [春运启动后文旅景点迎显著客流增长](https://so.toutiao.com/search?keyword=春运启动后文旅景点迎显著客流增长)
+1. [爱德华兹23+7+8 森林狼大胜快船](https://so.toutiao.com/search?keyword=爱德华兹23+7+8+森林狼大胜快船)
+1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
+1. [华人女孩进山徒步失联9天不幸遇难](https://so.toutiao.com/search?keyword=华人女孩进山徒步失联9天不幸遇难)
+1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
+1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
+1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
+1. [追梦创生涯最远命中纪录](https://so.toutiao.com/search?keyword=追梦创生涯最远命中纪录)
+1. [开40万国产新能源车回村被笑杂牌](https://so.toutiao.com/search?keyword=开40万国产新能源车回村被笑杂牌)
+1. [Arm涨幅扩大至30%以上](https://so.toutiao.com/search?keyword=Arm涨幅扩大至30%以上)
+1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
+1. [狄龙23+4 火箭105-103尼克斯](https://so.toutiao.com/search?keyword=狄龙23+4+火箭105-103尼克斯)
+1. [泰官员称他信已被列入假释人员名单](https://so.toutiao.com/search?keyword=泰官员称他信已被列入假释人员名单)
+1. [名嘴：俄罗斯工业能力超出美国想象](https://so.toutiao.com/search?keyword=名嘴：俄罗斯工业能力超出美国想象)
+1. [台湾网红夜闯柬埔寨诈骗园区直播](https://so.toutiao.com/search?keyword=台湾网红夜闯柬埔寨诈骗园区直播)
+1. [布伦森三连拒谈最后被判三分犯规](https://so.toutiao.com/search?keyword=布伦森三连拒谈最后被判三分犯规)
+1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
+1. [外国友人被福建游神震撼到了](https://so.toutiao.com/search?keyword=外国友人被福建游神震撼到了)
+1. [斯通：杰伦·格林的技能无法被复制](https://so.toutiao.com/search?keyword=斯通：杰伦·格林的技能无法被复制)
+1. [大学生回村过年被拉去参加学子联谊](https://so.toutiao.com/search?keyword=大学生回村过年被拉去参加学子联谊)
+1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
+1. [小朋友是不会说谎的](https://so.toutiao.com/search?keyword=小朋友是不会说谎的)
+1. [华春莹点赞成都除夕夜的灯光秀](https://so.toutiao.com/search?keyword=华春莹点赞成都除夕夜的灯光秀)
+1. [《第二十条》告诉你怎样做公职人员](https://so.toutiao.com/search?keyword=《第二十条》告诉你怎样做公职人员)
+1. [库里职业生涯助攻数达到5974个](https://so.toutiao.com/search?keyword=库里职业生涯助攻数达到5974个)
 1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
 1. [名宿：梅西是GOAT中的GOAT](https://so.toutiao.com/search?keyword=名宿：梅西是GOAT中的GOAT)
-1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
-1. [联合国警告：全面攻打拉法前景可怕](https://so.toutiao.com/search?keyword=联合国警告：全面攻打拉法前景可怕)
 1. [爸爸用夹子夹走女儿压岁钱被发现](https://so.toutiao.com/search?keyword=爸爸用夹子夹走女儿压岁钱被发现)
-1. [00后整顿过年红包](https://so.toutiao.com/search?keyword=00后整顿过年红包)
-1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
-1. [小杨哥掉水里 大杨哥被鞭炮炸伤](https://so.toutiao.com/search?keyword=小杨哥掉水里+大杨哥被鞭炮炸伤)
-1. [演员王东承认家暴](https://so.toutiao.com/search?keyword=演员王东承认家暴)
-1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
-1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
 1. [希林娜依高发文支持《热辣滚烫》](https://so.toutiao.com/search?keyword=希林娜依高发文支持《热辣滚烫》)
 1. [东契奇出战奇才拿到26分11板15助](https://so.toutiao.com/search?keyword=东契奇出战奇才拿到26分11板15助)
-1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
 1. [泰山队VS川崎前锋身价对比](https://so.toutiao.com/search?keyword=泰山队VS川崎前锋身价对比)
-1. [名嘴：俄罗斯工业能力超出美国想象](https://so.toutiao.com/search?keyword=名嘴：俄罗斯工业能力超出美国想象)
 1. [《烟火人家》今晚开播](https://so.toutiao.com/search?keyword=《烟火人家》今晚开播)
-1. [小朋友是不会说谎的](https://so.toutiao.com/search?keyword=小朋友是不会说谎的)
-1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
 1. [华春莹发了迪丽热巴春晚民族舞](https://so.toutiao.com/search?keyword=华春莹发了迪丽热巴春晚民族舞)
 1. [雷佳音说拍完戏成了贾玲粉丝](https://so.toutiao.com/search?keyword=雷佳音说拍完戏成了贾玲粉丝)
-1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
 1. [面部缝针的鲍威尔不会戴面具出战](https://so.toutiao.com/search?keyword=面部缝针的鲍威尔不会戴面具出战)
-1. [李雪琴谈和乔杉拍情感戏的感受](https://so.toutiao.com/search?keyword=李雪琴谈和乔杉拍情感戏的感受)
-1. [开40万国产新能源车回村被笑杂牌](https://so.toutiao.com/search?keyword=开40万国产新能源车回村被笑杂牌)
 1. [日本东京一公寓楼发生火灾 2人重伤](https://so.toutiao.com/search?keyword=日本东京一公寓楼发生火灾+2人重伤)
 1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
-1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
-1. [75国向西方发起全球性索赔](https://so.toutiao.com/search?keyword=75国向西方发起全球性索赔)
 1. [多姿多彩庆新春 欢欢喜喜过大年](https://so.toutiao.com/search?keyword=多姿多彩庆新春+欢欢喜喜过大年)
 1. [张杰回应张家不养闲人](https://so.toutiao.com/search?keyword=张杰回应张家不养闲人)
 1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
-1. [Arm涨幅扩大至30%以上](https://so.toutiao.com/search?keyword=Arm涨幅扩大至30%以上)
 1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
-1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
 1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
 1. [卡尔森称普京愿在乌克兰问题上妥协](https://so.toutiao.com/search?keyword=卡尔森称普京愿在乌克兰问题上妥协)
 1. [文班亚马10帽刷新生涯纪录](https://so.toutiao.com/search?keyword=文班亚马10帽刷新生涯纪录)
@@ -90,7 +107,6 @@
 1. [金晨秒猜白敬亭魏大勋歌声](https://so.toutiao.com/search?keyword=金晨秒猜白敬亭魏大勋歌声)
 1. [刘和平：要警惕菲律宾在南海挑冲突](https://so.toutiao.com/search?keyword=刘和平：要警惕菲律宾在南海挑冲突)
 1. [较强冷空气开始影响我国大部地区](https://so.toutiao.com/search?keyword=较强冷空气开始影响我国大部地区)
-1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
 1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
 1. [正月初四“迎灶神”](https://so.toutiao.com/search?keyword=正月初四“迎灶神”)
 1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
